--- a/versions/3.1.1.md
+++ b/versions/3.1.1.md
@@ -2760,9 +2760,9 @@ This object MAY be extended with [Specification Extensions](#specification-exten
 
 ##### Extended Validation with Annotations
 
-JSON Schema draft 2020-12 supports [collecting annotations](https://datatracker.ietf.org/doc/html/draft-bhutton-json-schema-00#section-7.7.1), including [treating unrecognized keywords as annotations](https://datatracker.ietf.org/doc/html/draft-bhutton-json-schema-00#section-6.5).
+JSON Schema Draft 2020-12 supports [collecting annotations](https://datatracker.ietf.org/doc/html/draft-bhutton-json-schema-00#section-7.7.1), including [treating unrecognized keywords as annotations](https://datatracker.ietf.org/doc/html/draft-bhutton-json-schema-00#section-6.5).
 OAS implementations MAY use such annotations, including [extensions](https://spec.openapis.org/registry/extension/) not recognized as part of a declared JSON Schema vocabulary, as the basis for further validation.
-Note that JSON Schema draft 2020-12 does not require an `x-` prefix for extensions.
+Note that JSON Schema Draft 2020-12 does not require an `x-` prefix for extensions.
 
 ###### Non-validating constraint keywords
 
@@ -2773,7 +2773,7 @@ Extended validation is one way that these constraints MAY be enforced.
 
 The `readOnly` and `writeOnly` keywords are annotations, as JSON Schema is not aware of how the data it is validating is being used.
 Validation of these keywords MAY be done by checking the annotation, the read or write direction, and (if relevant) the current value of the field.
-[JSON Schema Validation draft 2020-12 §9.4](https://datatracker.ietf.org/doc/html/draft-bhutton-json-schema-validation-00#section-9.4) defines the expectations of these keywords, including that resource (described as the "owning authority") MAY either ignore a `readOnly` field or treat it as an error.
+[JSON Schema Validation Draft 2020-12 §9.4](https://datatracker.ietf.org/doc/html/draft-bhutton-json-schema-validation-00#section-9.4) defines the expectations of these keywords, including that a resource (described as the "owning authority") MAY either ignore a `readOnly` field or treat it as an error.
 
 An example of  where ignoring a "written" `readOnly` field might be appropriate is a PUT request where the field is included but the value has not been changed, since the alternative of leaving out the field would result in the field's deletion per [[RFC7231]].
 
@@ -2933,10 +2933,10 @@ additionalProperties:
 
 ```yaml
   oneOf:
-  - const: rgb
+  - const: RGB
     title: Red, Green, Blue
     description: Specify colors with the red, green, and blue additive color model
-  - const: cmyk
+  - const: CMYK
     title: Cyan, Magenta, Yellow, Black
     description: Specify colors with the cyan, magenta, yellow, and black subtractive color model
 ```
