--- a/versions/3.1.1.md
+++ b/versions/3.1.1.md
@@ -4116,7 +4116,7 @@ Certain fields allow the use of Markdown which can contain HTML including script
 
 | Version | Date | Notes |
 | ---- | ---- | ---- |
-| 3.1.1 | TBD | Patch release of the OpenAPI Specification 3.1.1 |
+| 3.1.1 | 2024-10-17 | Patch release of the OpenAPI Specification 3.1.1 |
 | 3.1.0 | 2021-02-15 | Release of the OpenAPI Specification 3.1.0 |
 | 3.1.0-rc1 | 2020-10-08 | rc1 of the 3.1 specification |
 | 3.1.0-rc0 | 2020-06-18 | rc0 of the 3.1 specification |
